<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home" />
        <item
            android:id="@+id/navigation_local_book"
            android:icon="@drawable/ic_local_book"
            android:title="本地图书" />
        <!--<item
            android:id="@+id/navigation_net_book"
            android:icon="@drawable/ic_net_book"
            android:title="在线图书" />-->
        <item
            android:id="@+id/navigation_book_note"
            android:icon="@drawable/ic_booknote"
            android:title="我的笔记" />
        <!--<item
            android:id="@+id/navigation_bookmark"
            android:icon="@drawable/ic_bookmark"
            android:title="我的书签" />-->
        <item
            android:id="@+id/navigation_book"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_book" />

        <item
            android:id="@+id/navigation_staffAdmin"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/title_AdminStaff" />
        <item
            android:id="@+id/navigation_profile"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/title_profile" />

        <item
            android:title="@string/others" >

            <menu>

                <item
                    android:id="@+id/menuAboutUs"
                    android:icon="@drawable/ic_alert"
                    android:title="@string/about_us" />

                <item
                    android:id="@+id/menuFeedback"
                    android:icon="@drawable/ic_alert"
                    android:title="@string/feedback" />


            </menu>

        </item>
    </group>
</menu>