<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.laibraryadminstaff.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_book"
        android:name="com.example.laibraryadminstaff.ui.book.BookFragment"
        android:label="@string/title_book"
        tools:layout="@layout/fragment_book" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.laibraryadminstaff.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_staffAdmin"
        android:name="com.example.laibraryadminstaff.ui.AdminStaff.AdminStaffFramgnet"
        android:label="@string/title_AdminStaff"
        tools:layout="@layout/fragment_adminstaff" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.laibraryadminstaff.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />




</navigation>